--- a/HTML/EX/04_3_tableTag.html
+++ b/HTML/EX/04_3_tableTag.html
@@ -69,11 +69,12 @@
 
     <table>
         <caption>성적표</caption>
+        <br>
         <colgroup>
             <col>
             <col>
             <col>
-            <col style="background-color: blueviolet;">
+            <col style="background-color: aquamarine;">
             <col>
             <col>
         </colgroup>
